Fix image size breaking on mobile viewports

--- a/static/styles.css
+++ b/static/styles.css
@@ -14,7 +14,9 @@ ul {
 
 img {
     height: auto;
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
+    
 }
 
 main {
